
BUILD - Added code analysis using FxCop to build process.
BUILD - Removed Votive project from solution to allow building solution without WiX.
BUILD - Added WiX build to NAnt build files, re-organized installer building slightly.
BUILD - Added NAnt build files to build main targets and build "release" target files.
BUILD - Various modifications to version generation, MSI installer building.
FEAT - Added Volleyball court - code courtesy of Lukas Kawalec (kadeon)
CHG - Made the hockey benches and penalty boxes slightly deeper and wider to fit players better.
CHG - Moved "root" menu back to "Sequence" menu and moved position of "Playing Surface" menu to end.
FEAT - Added menu items in Help menu linking to installed documents (readme, changelog, license)


0.2.0 - First useful version
FEAT - Copying current layout to clipboard as an image for easily importing into other programs, such as PowerPoint.
FEAT - Ensure that "Saved Layouts" are only available for the currently selected sports field type.
FEAT - Improve layout sequence creation and management.
FEAT - Exporting image sequences as bitmaps.
FEAT - Clean up initial hockey player placement, bench layout and devise new labelling system to support sports like hockey.
FEAT - Implement saving and loading of "Saved Layouts" as they currently don't save to disk.
FEAT - Provide sample layouts for library and improved installation and usage instructions related to the library and file locations. 
FEAT - Added Windows installer
FIX - Corrected missing centre line on soccer field.

0.1.1 - Minor fixes and features

0.1.0 - Initial Release
FEAT - Supports more than one sport (currently Soccer and Hockey), more to be added. 
FEAT - Records sequences of positions for documenting tactical strategies or plays. 
FEAT - Save and loads tactical sequences from files - allows building a library of plays or drills. 
FEAT - Supports pre-defined layouts that position players, ball/puck and officials. 